      Fixes: #1258
    - Windows: Update PuTTY from 0.68 to 0.70, which fixes PuTTY vulns
      vuln-indirect-dll-hijack-2 & vuln-indirect-dll-hijack-3.
      Note that x2goclient was only ever affected if the permissions on the
      installation folder were changed to give users write access, or if
      x2goclient was copied/extracted to a folder where users could write.

 -- X2Go Release Manager <git-admin@x2go.org>  Thu, 15 Feb 2018 22:01:32 +0100

x2goclient (4.1.1.1-0x2go1) unstable; urgency=medium

  [ Mihai Moldovan ]
  * New upstream version (4.1.1.1):
    - src/pulsemanager.cpp: print out PA --version output as a debug message.
    - macbuild.sh: also bundle xauth binary as nxauth binary.
    - macbuild.sh: switch to bundling PulseAudio 11.1 since it's now available
      in MacPorts.
    - src/sshmasterconnection.cpp: don't ask for private key passphrase if
      auto-login merely failed due to the server denying the public key.
      Fixes: #1122.
    - src/{httpbrokerclient,onmainwindow,sshmasterconnection}.{cpp,h}:
      introduce new passphrase_type enum and replace the old verificationCode
      boolean value with that. Allows using more messages, including a new one
      for plain password prompts. Adapt usage accordingly. The implementation
      is ugly, but there's no good way around that (short of using C++11
      features). The enum would really logically belong to ONMainWindow, but
      since we also have to use it in SshMasterConnection, that may not
      include onmainwindow.h to avoid a circular dependency, it has to be
      part of SshMasterConnection for now.
    - src/sshmasterconnection.cpp: query for password if it wasn't already
      provided. Fixes: #1122. This usually happens if auto-login is enabled,
      which bypasses the password prompt. If auto-login fails, authentication
      normally continues via challenge auth or plain passwords, but since